# loco-template

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: main.rs
