[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
version = "0.0.0"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-halt = "0.2.0"
loco = { git = "https://github.com/dotcypress/loco" }

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
